# poplar

./: .gitignore  .gitmodules  .rustc_info.json  .rustdoc_fingerprint.json  .travis.yml  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE.md  Makefile  Poplar.toml  README.md  Xargo.toml  book.toml  grub.cfg  linker.ld  rustfmt.toml  style.css
bootloader/: .gitignore  Cargo.toml  Makefile  OVMF_VARS-pure-efi.fd  README.md  bootloader.img  stage0.s  test.txt  uefi_x64.json
bootloader/ovmf/: OVMF_VARS.fd
bootloader/src/: boot.rs  elf.rs  image.rs  kernel.rs  logger.rs  main.rs  memory.rs  probestack.rs  runtime.rs  runtime_services.rs  system_table.rs  text.rs  types.rs  uefi.rs
bootloader/src/boot_services/: events.rs  memory.rs  mod.rs  pool_ptr.rs  protocols.rs
bootloader/src/protocols/: console.rs  files.rs  mod.rs
bootloader/src/uefi/: mod.rs  runtime_services.rs  system_table.rs
drivers/simple_fb/: Cargo.toml
drivers/simple_fb/src/: main.rs
ginkgo/: Cargo.toml  README.md  test.ginkgo
ginkgo/examples/: fibonacci.ginkgo  function.ginkgo  while.ginkgo
ginkgo/src/: ast.rs  diagnostic.rs  interpreter.rs  lex.rs  lib.rs  main.rs  object.rs  parse.rs  vm.rs
kernel/: Cargo.toml  Makefile  README.md  Xargo.toml  grub.cfg  x86_64-rustos.json
kernel/arch/: Cargo.toml
kernel/arch/src/: lib.rs
kernel/boot_info/: Cargo.toml
kernel/boot_info/src/: kernel_map.rs  lib.rs
kernel/boot_info_x86_64/: Cargo.toml
kernel/boot_info_x86_64/src/: kernel_map.rs  lib.rs
kernel/bump_allocator/: Cargo.toml
kernel/bump_allocator/src/: lib.rs
kernel/common/: Cargo.toml
kernel/common/src/: binary_pretty_print.rs  lib.rs
kernel/efiloader/: Cargo.toml
kernel/efiloader/src/: allocator.rs  command_line.rs  image.rs  logger.rs  main.rs
kernel/hal/: Cargo.toml
kernel/hal/src/: boot_info.rs  lib.rs  pci.rs
kernel/hal_arm64/: Cargo.toml
kernel/hal_riscv/: Cargo.toml
kernel/hal_riscv/src/: lib.rs
kernel/hal_x86_64/: Cargo.toml  link.ld  x86_64-kernel.json
kernel/hal_x86_64/src/: acpi_handler.rs  kernel_map.rs  lib.rs  logger.rs  paging.rs  per_cpu.rs  task.rs  task.s
kernel/heap_allocator/: Cargo.toml
kernel/heap_allocator/src/: hole.rs  lib.rs
kernel/hole_tracking_allocator/: Cargo.toml
kernel/hole_tracking_allocator/src/: hole.rs  lib.rs
kernel/kernel_riscv/: Cargo.toml  build.rs  link.ld  mq_pro.ld
kernel/kernel_riscv/src/: clocksource.rs  interrupts.rs  logger.rs  main.rs  pci.rs  serial.rs  task.rs  task.s  trap.rs
kernel/kernel_rpi4/: Cargo.toml  link.ld  rpi4-kernel.json
kernel/kernel_rpi4/src/: main.rs  start.s
kernel/kernel_x86_64/: Cargo.toml  build.rs  link.ld  x86_64-kernel.json
kernel/kernel_x86_64/src/: acpi_handler.rs  clocksource.rs  interrupts.rs  kacpi.rs  lib.rs  logger.rs  main.rs  pci.rs  per_cpu.rs  syscall.s  task.rs  task.s  topo.rs
kernel/multiboot2/: Cargo.toml  LICENSE
kernel/multiboot2/src/: boot_loader_name.rs  command_line.rs  elf_sections.rs  header.rs  lib.rs  memory_map.rs  module.rs
kernel/rustos_common/: Cargo.toml
kernel/rustos_common/src/: lib.rs  port.rs
kernel/src/: arch.rs  bootinfo.rs  clocksource.rs  heap_allocator.rs  interrupts.rs  lib.rs  mailbox.rs  node.rs  panic.rs  pci.rs  per_cpu.rs  process.rs  process_map.rs  scheduler.rs  serial.rs  slab_allocator.rs  syscall.rs  vga_buffer.rs
kernel/src/fs/: mod.rs  ramdisk.rs
kernel/src/interrupts/: gdt.rs  idt.rs  mod.rs  pic.rs
kernel/src/memory/: area_frame_allocator.rs  buddy_allocator.rs  kernel_stack_allocator.rs  map.rs  mod.rs  slab_allocator.rs  stack_allocator.rs
kernel/src/object/: address_space.rs  channel.rs  common.rs  event.rs  interrupt.rs  map.rs  memory_object.rs  mod.rs  task.rs
kernel/src/pmm/: buddy.rs  mod.rs
kernel/src/syscall/: mod.rs  validation.rs
kernel/src/tasklets/: mod.rs  queue.rs
kernel/src/util/: binary_pretty_print.rs  bitmap.rs  math.rs  mod.rs
kernel/src/vmm/: mod.rs  slab_allocator.rs
kernel/src/x86_64/: acpi_handler.rs  address_space.rs  boot.s  boot64.s  bootstrap.s  cpu.rs  entry64.s  gdt.rs  idt.rs  interrupts.rs  link.ld  linker.ld  logger.rs  memory_object.rs  mod.rs  per_cpu.rs  process.rs  serial.rs  task.rs  task.s  tlb.rs  tss.rs  vga_buffer.rs
kernel/util/: Cargo.toml
kernel/util/src/: lib.rs
kernel/x86_64/: Cargo.toml  Makefile  Xargo.toml  linker.ld  x86_64-pebble-kernel.json
kernel/x86_64/src/: acpi_handler.rs  apic.rs  bootstrap.s  control_reg.rs  cpu.rs  gdt.rs  i8259_pic.rs  idt.rs  interrupts.rs  io_apic.rs  lib.rs  local_apic.rs  panic.rs  pci.rs  pic.rs  pit.rs  port.rs  process.rs  registers.rs  serial.rs  tlb.rs  tss.rs  user_mode.rs  vga_buffer.rs
lib/hal_riscv/: Cargo.toml
lib/hal_riscv/src/: kernel_map.rs  lib.rs  paging.rs  platform_d1.rs  platform_virt.rs
lib/hal_x86_64/: Cargo.toml
lib/hal_x86_64/src/: kernel_map.rs  lib.rs  paging.rs
lib/libpebble/: Cargo.toml
lib/libpebble/src/: bit_field.rs  caps.rs  channel.rs  lib.rs  object.rs
lib/mer/: Cargo.toml  README.md
lib/mer/src/: header.rs  lib.rs  note.rs  program.rs  section.rs  symbol.rs
lib/picotoml/: Cargo.toml  LICENSE-MIT  README.md
lib/picotoml/src/: de.rs  error.rs  lexer.rs  lib.rs  peeking.rs
lib/poplar/: Cargo.toml
lib/ptah/: Cargo.toml
lib/x86_64/: Cargo.toml  README.md
seed/seed_riscv/: Cargo.toml  build.rs  link.ld  mq_pro.ld  rv64_virt.ld
seed/seed_uefi/: Cargo.toml
tools/xtask/: Cargo.toml
user/: Cargo.toml  Makefile  x86_64-poplar.json
user/echo/: Cargo.toml
user/fb_console/: Cargo.toml
user/hello_world/: Cargo.toml
user/pci_bus/: Cargo.toml
user/platform_bus/: Cargo.toml
user/service_host/: Cargo.toml
user/simple_fb/: Cargo.toml
user/test1/: Cargo.toml
user/test2/: Cargo.toml
user/test_pf/: Cargo.toml
user/test_tls/: Cargo.toml
user/usb_bus_ehci/: Cargo.toml
user/usb_bus_xhci/: Cargo.toml
user/usb_hid/: Cargo.toml
user/virtio_gpu/: Cargo.toml
x86_64/: Cargo.toml  Makefile
x86_64/src/: apic.rs  boot.rs  cpu.rs  gdt.rs  interrupts.rs  lib.rs  panic.rs  pit.rs  process.rs  serial.rs  user_mode.rs  vga_buffer.rs
(+7820 files in other folders)
