[workspace]

[package]
name = "kernel"
version = "0.0.1"
authors = ["Isaac Woods"]

[dependencies]
volatile                = "*"
spin                    = "*"
bitflags                = "*"
bit_field               = "*"
pebble_syscall_common   = "*"

[dependencies.num-traits]
version             = "*"
default-features    = false

[dependencies.log]
version             = "*"
default-features    = false
