[workspace]

[package]
name = "kernel"
version = "0.0.1"
authors = ["Isaac Woods"]

[dependencies]
volatile                = "*"
spin                    = "*"
bitflags                = "*"
bit_field               = "*"

[dependencies.libpebble]
version                 = "*"
default-features        = false
features                = ["kernel"]

[patch.crates-io]
libpebble = { path = "../libpebble", features = ["kernel"] }

[dependencies.num-traits]
version             = "*"
default-features    = false

[dependencies.log]
version             = "*"
default-features    = false
