[package]
name = "bootloader"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
fixedvec = "0.2"
bit_field = "0.9"
bitflags = "1"
mer = { path = "../lib/mer" }
x86_64 = { path = "../lib/x86_64" }
log = "0.4"

[profile.release]
debug = true

[package.metadata.cargo-xbuild]
memcpy = true
