[package]
name = "kernel"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
hal = { path = "../lib/hal" }
seed = { path = "../seed" }
poplar_util = { path = "../lib/poplar_util", features = ["has_alloc"] }
cfg-if = "0.1"
bitflags = "1"
bit_field = "0.10"
poplar = { path = "../lib/poplar" }
ptah = { path = "../lib/ptah" }
pci_types = { path = "../lib/pci_types" }
tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
spinning_top = "0.3.0"

[workspace]
members = ["kernel_x86_64", "kernel_riscv"]
resolver = "2"
