[package]
name = "kernel"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
hal = { path = "../lib/hal" }
seed = { path = "../seed" }
mulch = { path = "../lib/mulch", features = ["has_alloc"] }
cfg-if = "0.1"
bitflags = "1"
bit_field = "0.10"
linked_list_allocator = "0.10.5"
poplar = { path = "../lib/poplar", features = ["ddk"] }
ptah = { path = "../lib/ptah" }
pci_types = { path = "../lib/pci_types" }
tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
spinning_top = "0.3.0"
maitake = { git = "https://github.com/hawkw/mycelium", features = ["alloc", "tracing-02"] }
