[workspace]
members = [
    "simple_fb",
    "echo",
    "platform_bus",
    "pci_bus",
    "usb_bus_xhci",
    "tests/test_tls",
    "tests/test_pf",
    "tests/test1",
    "tests/test2",
    "tests/test_syscalls",
]
resolver = "2"

[profile.dev]
debug = false
panic = "abort"

[profile.release]
panic = "abort"
