[workspace]

[package]
name = "x86_64"
version = "0.0.1"
authors = ["Isaac Woods <isaacwoods.home@gmail.com>",
           "Philipp Oppermann <dev@phil-opp.com>",
           "Calvin Lee <cyrus296@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc                   = "*"
bitflags                = "*"
bit_field               = "*"
volatile                = "*"
spin                    = "*"
pebble_syscall_common   = "*"

[dependencies.log]
version                 = "*"
default-features        = false

[dependencies.goblin]
version                 = "*"
default-features        = false
features                = ["elf64"]

[dependencies.hole_tracking_allocator]
path = "../hole_tracking_allocator"

[dependencies.kernel]
path = ".."
