[package]
name = "efiloader"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
hal = { path = "../hal" }
hal_x86_64 = { path = "../hal_x86_64" }
log = "0.4"
uefi = { path = "../../lib/uefi-rs" }
ucs2 = { path = "../../lib/ucs2-rs" }
mer = { path = "../../lib/mer" }
x86_64 = { path = "../../lib/x86_64" }
spin = "0.5"
