[package]
name = "efiloader"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
rlibc = "1"
hal = { path = "../hal" }
hal_x86_64 = { path = "../hal_x86_64" }
log = "0.4"
spin = "0.5"
uefi = { path = "../../lib/uefi-rs" }
ucs2 = { path = "../../lib/ucs2-rs" }
mer = { path = "../../lib/mer" }
gfxconsole = { path = "../../lib/gfxconsole" }
pebble_util = { path = "../../lib/pebble_util" }
