[package]
name = "efiloader"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
hal = { path = "../../lib/hal" }
hal_x86_64 = { path = "../../lib/hal_x86_64" }
log = "0.4"
spin = "0.9.2"
uefi = { path = "../../lib/uefi-rs" }
mer = { path = "../../lib/mer" }
gfxconsole = { path = "../../lib/gfxconsole" }
poplar_util = { path = "../../lib/poplar_util" }
