[package]
name = "hal_x86_64"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
cfg-if = "0.1"
hal = { path = "../hal" }
bitflags = "1"
bit_field = "0.10"
spin = "0.5"
pebble_util = { path = "../../lib/pebble_util" }
log = { version = "0.4", default-features = false }
acpi = { path = "../../lib/acpi/acpi", optional = true }
aml = { path = "../../lib/acpi/aml", optional = true }
pin-utils = "0.1.0-alpha.4"

[features]
default_features = []
kernel = ["acpi", "aml"]
