[package]
name = "hal_x86_64"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
hal = { path = "../hal" }
bitflags = "1"
bit_field = "0.10"
spin = "0.5"
pebble_util = { path = "../../lib/pebble_util" }
log = { version = "0.4", default-features = false }

[features]
default_features = []
