[package]
name = "kernel_x86_64"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
kernel = { path = "../" }
hal = { path = "../../lib/hal" }
hal_x86_64 = { path = "../../lib/hal_x86_64" }
seed = { path = "../../seed" }
spinning_top = { version = "0.2.4", features = ["nightly"] }
spin = "0.9.2"
tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
bit_field = "0.10"
acpi = { path = "../../lib/acpi/acpi" }
aml = { path = "../../lib/acpi/aml" }
poplar_util = { path = "../../lib/poplar_util" }
gfxconsole = { path = "../../lib/gfxconsole" }
pci_types = { path = "../../lib/pci_types" }

[features]
qemu_exit = ["hal_x86_64/qemu"]
