[package]
name = "multiboot2"
version = "0.0.1"
authors = ["Philipp Oppermann <dev@phil-opp.com>",
           "Calvin Lee <cyrus296@gmail.com>",
           "Isaac Woods"]
license = "MIT"
description = "Reads information from the Multiboot2 structure an ELF64 kernel"

[dependencies.bitflags]
version = "0.4.0"
features = ["no_std"]

[features]
elf32 = []
