[package]
name = "x86_64"
version = "0.0.1"
authors = ["Isaac Woods <isaacwoods.home@gmail.com>",
           "Philipp Opperman <dev@phil-opp.com>",
           "Calvin Lee <cyrus296@gmail.com>"]

[dependencies]
bitflags  = "*"
bit_field = "*"
volatile  = "*"
spin      = "*"

[dependencies.hole_tracking_allocator]
path = "../hole_tracking_allocator"

[features]
elf32 = []
