[workspace]

[package]
name = "x86_64"
version = "0.0.1"
authors = ["Isaac Woods <isaac@isaacwoods.tk>",
           "Philipp Oppermann <dev@phil-opp.com>",
           "Calvin Lee <cyrus296@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc                   = "*"
bitflags                = "*"
bit_field               = "*"
volatile                = "*"
spin                    = "*"
xmas-elf                = "*"
clippy                  = {version = "*", optional = true}

[dependencies.log]
version                 = "*"
default-features        = false

[dependencies.heap_allocator]
path = "../heap_allocator"

[dependencies.kernel]
path = ".."

[dependencies.common]
path = "../common"
