[package]
name = "x86_64"
version = "0.0.1"
authors = ["Isaac Woods <isaac@isaacwoods.tk>",
           "Philipp Oppermann <dev@phil-opp.com>",
           "Calvin Lee <cyrus296@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[package.metadata.cargo-xbuild]
memcpy = true

[dependencies]
bitflags                = "*"
bit_field               = "*"
volatile                = "*"
spin                    = "*"
xmas-elf                = "*"

[dependencies.log]
version                 = "*"
default-features        = false

[dependencies.x86_64]
path = "../../x86_64"

[dependencies.heap_allocator]
path = "../heap_allocator"

[dependencies.acpi]
path = "../acpi"
features = ["debug_parser"]

[dependencies.kernel]
path = ".."

[dependencies.common]
path = "../common"

[dependencies.libmessage]
path = "../../libmessage"
features = ["kernel"]
