[package]
name = "hal_riscv"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2021"

[dependencies]
hal = { path = "../hal" }
volatile = { path = "../volatile" }
bitflags = "1.3.2"
bit_field = "0.10.1"
mulch = { path = "../mulch" }
tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
cfg-if = "1.0"

[features]
platform_rv64_virt = ["hal/platform_rv64_virt"]
platform_mq_pro = ["hal/platform_mq_pro"]
