[package]
name = "hal_x86_64"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
hal = { path = "../hal" }
bitflags = "1"
bit_field = "0.10"
spin = "0.9.2"
poplar_util = { path = "../poplar_util" }
tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }

[features]
default_features = []
qemu = []
