[package]
name = "libpebble"
version = "0.2.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
cfg-if = "0.1"
bit_field = "0.10"
log = { version = "0.4", optional = true }
bitflags = "1"
pci_types = { path = "../pci_types" }
ptah = { path = "../ptah", optional = true }

[features]
can_alloc = ["log", "ptah"]
