[package]
name = "mer"
version = "0.5.1"
authors = ["Isaac Woods"]
edition = "2021"
repository = "https://github.com/IsaacWoods/poplar/tree/main/lib/mer"
description = "Ergonomic ELF64 parser, designed for use within kernels"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
scroll = { version = "0.12", default-features = false, features = ["derive"] }
bit_field = "0.10"
