[package]
name = "picotoml"
version = "0.1.0"
description = "A `no_std` TOML deserializer build for embedded systems. Can be used without an allocator"
authors = ["Isaac Woods"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
logos = { version = "0.13.0", default-features = false, features = ["export_derive"] }
serde = { version = "1.0.188", default-features = false }
heapless = "0.8.0"

[features]
default = []
alloc = ["serde/alloc"]
std = ["serde/std"]
