[package]
name = "poplar"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust interace to the Poplar kernel from userspace"

[dependencies]
bit_field = "0.10.2"
bitflags = "2.4.0"
cfg-if = "0.1"
log = { version = "0.4", optional = true }
pci_types = { path = "../pci_types", optional = true }
ptah = { path = "../ptah", optional = true, default-features = false }

[features]
default = ["can_alloc", "pci"]
can_alloc = ["log", "ptah", "ptah/alloc", "ptah/derive"]
pci = ["pci_types"]
