[package]
name = "poplar"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust interace to the Poplar kernel from userspace"

[dependencies]
bit_field = "0.10.2"
bitflags = "2.4.0"
cfg-if = "0.1"
log = { version = "0.4", optional = true }
pci_types = { path = "../pci_types", optional = true }
ptah = { path = "../ptah", optional = true, default-features = false }
linked_list_allocator = { version = "0.10.5", optional = true, features = ["alloc_ref"] }
poplar_util = { path = "../poplar_util" }
maitake = { git = "https://github.com/hawkw/mycelium", optional = true, features = ["alloc", "tracing-02"] }
spinning_top = "0.3.0"

[features]
default = ["can_alloc", "async"]
can_alloc = ["log", "ptah", "ptah/alloc", "ptah/derive"]
ddk = ["pci_types", "linked_list_allocator"]
async = ["can_alloc", "maitake"]
