[workspace]
members = ["ptah_derive"]

[package]
name = "ptah"
version = "0.2.0"
authors = ["Isaac Woods"]
edition = "2021"
description = "Rust implementation of Ptah, Poplar's message-passing format"
license = "MIT OR Apache-2.0"

[dependencies]
ptah_derive = { version = "0.1.0", optional = true }
heapless = { version = "0.7.16", optional = true }

[patch.crates-io]
ptah_derive = { path = "ptah_derive" }

[features]
default = ["alloc", "derive"]
derive = ["ptah_derive"]
alloc = []
