[package]
name = "seed_riscv"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2021"

[dependencies]
seed = { path = ".." }
hal = { path = "../../lib/hal/" }
hal_riscv = { path = "../../lib/hal_riscv/" }
poplar_util = { path = "../../lib/poplar_util/" }
volatile = { path = "../../lib/volatile" }
spinning_top = { version = "0.2.4", features = ["nightly"] }
bit_field = "0.10.1"
fdt = "0.1.3"
tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
arrayvec = { version = "0.7.2", default-features = false }
mer = { path = "../../lib/mer/" }
