[package]
name = "seed_riscv"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2021"

[dependencies]
seed = { path = ".." }
hal = { path = "../../lib/hal/" }
hal_riscv = { path = "../../lib/hal_riscv/" }
poplar_util = { path = "../../lib/poplar_util/" }
volatile = { path = "../../lib/volatile" }
spinning_top = { version = "0.2.4", features = ["nightly"] }
bit_field = "0.10.1"
fdt = { path = "../../lib/fdt/", features = ["pretty-printing"] }
tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
linked_list_allocator = "0.10.5"
arrayvec = { version = "0.7.2", default-features = false }
mer = { path = "../../lib/mer/" }
pci_types = { path = "../../lib/pci_types" }
virtio = { path = "../../lib/virtio" }
gpt = { path = "../../lib/gpt" }
heapless = "0.8.0"

[features]
platform_rv64_virt = ["hal_riscv/platform_rv64_virt"]
platform_mq_pro = ["hal_riscv/platform_mq_pro"]
