[package]
name = "seed_uefi"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
seed = { path = ".." }
hal = { path = "../../lib/hal" }
hal_x86_64 = { path = "../../lib/hal_x86_64" }
log = "0.4"
spin = "0.9.2"
uefi = { version = "0.24.0", features = ["alloc", "global_allocator"] }
mer = { path = "../../lib/mer" }
gfxconsole = { path = "../../lib/gfxconsole" }
poplar_util = { path = "../../lib/poplar_util" }
heapless = "0.7.16"
