[package]
name = "seed_uefi"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
seed_bootinfo = { path = "../seed_bootinfo" }
seed_config = { path = "../seed_config" }
hal = { path = "../../lib/hal" }
hal_x86_64 = { path = "../../lib/hal_x86_64" }
log = "0.4"
spinning_top = "0.3.0"
uefi = { version = "0.35.0", features = ["alloc", "global_allocator"] }
mer = { path = "../../lib/mer" }
gfxconsole = { path = "../../lib/gfxconsole" }
mulch = { path = "../../lib/mulch" }
serde = { version = "1", default-features = false, features = [
    "derive",
    "alloc",
] }
picotoml = { path = "../../lib/picotoml" }
