[package]
name = "xtask"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
xflags = "0.3.1"
xshell = "0.1.14"
eyre = "0.6.5"
color-eyre = "0.5.11"
gpt = "3.1.0"
fatfs = "0.3.5"
fscommon = "0.1.1"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
colored = "2.0.4"
serialport = "4.2.2"
seed = { path = "../../seed/" }
