[package]
name = "pci_bus"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
poplar = { path = "../../lib/poplar", features = ["can_alloc"] }
linked_list_allocator = "0.9.0"
log = "0.4"
pci_types = { path = "../../lib/pci_types" }
platform_bus = { path = "../platform_bus" }
ptah = { path = "../../lib/ptah" }
