[package]
name = "platform_bus"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[lib]
name = "platform_bus"
path = "src/lib.rs"

[[bin]]
name = "platform_bus"
path = "src/main.rs"

[dependencies]
libpebble = { path = "../../lib/libpebble", features = ["can_alloc"] }
linked_list_allocator = "0.8"
log = "0.4"
ptah = { path = "../../lib/ptah" }
