[package]
name = "platform_bus"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2021"

[lib]
name = "platform_bus"
path = "src/lib.rs"

[[bin]]
name = "platform_bus"
path = "src/main.rs"

[dependencies]
std = { path = "../../lib/std", features = ["async", "ddk"] }
poplar = { path = "../../lib/poplar" }
service_host = { path = "../service_host" }
log = "0.4"
ptah = { path = "../../lib/ptah" }
spinning_top = "0.3.0"
pci_types = { path = "../../lib/pci_types" }
