[package]
name = "simple_fb"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2021"

[dependencies]
std = { path = "../../lib/std" }
poplar = { path = "../../lib/poplar", features = ["can_alloc"] }
linked_list_allocator = "0.10.2"
log = "0.4"
gfxconsole = { path = "../../lib/gfxconsole" }
ptah = { path = "../../lib/ptah" }
