[package]
name = "usb_bus_ehci"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2021"

[dependencies]
std = { path = "../../lib/std", features = ["ddk"] }
log = "0.4"
service_host = { path = "../service_host" }
platform_bus = { path = "../platform_bus" }
ptah = { path = "../../lib/ptah" }
bit_field = "0.10"
mycelium-bitfield = "0.1.4"
bitflags = "2.4.1"
usb = { path = "../../lib/usb" }
spinning_top = "0.3.0"
