[package]
name = "usb_bus_xhci"
version = "0.1.0"
authors = ["Isaac Woods"]
edition = "2018"

[dependencies]
poplar = { path = "../../lib/poplar", features = ["can_alloc"] }
linked_list_allocator = "0.9.0"
log = "0.4"
platform_bus = { path = "../platform_bus" }
ptah = { path = "../../lib/ptah" }
bit_field = "0.10"
pebble_util = { path = "../../lib/pebble_util" }
